--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -3,10 +3,23 @@ version = 1
 test_patterns = ["**/test/**"]
 
 exclude_patterns = [
-  "static/**",
-  "deploy/**",
-  "contributions/**"
+    "static/**",
+    "deploy/**",
+    "contributions/**"
 ]
 
 [[analyzers]]
-name = "secrets"
+name = "javascript"
+enabled = true
+
+  [analyzers.meta]
+  plugins = ["react"]
+  environment = [
+    "nodejs",
+    "browser",
+    "cypress"
+  ]
+  dialect = "typescript"
+  dependency_file_paths = [
+  '/app/client/'
+  ]
